[gd_scene load_steps=16 format=2]

[ext_resource path="res://GUI/PlayerGUIHealth_progress.png" type="Texture" id=1]
[ext_resource path="res://GUI/PlayerGUIHealth_under.png" type="Texture" id=2]
[ext_resource path="res://GUI/PlayerGUIHealth_over.png" type="Texture" id=3]
[ext_resource path="res://GUI/PlayerGUI.gd" type="Script" id=4]
[ext_resource path="res://GUI/PlayerGUIHunger_under.png" type="Texture" id=5]
[ext_resource path="res://GUI/PlayerGUIHunger_over.png" type="Texture" id=6]
[ext_resource path="res://GUI/PlayerGUIHunger_progress.png" type="Texture" id=7]
[ext_resource path="res://GUI/PlayerGUIThirst_over.png" type="Texture" id=8]
[ext_resource path="res://GUI/PlayerGUIThirst_under.png" type="Texture" id=9]
[ext_resource path="res://GUI/PlayerGUIThirst_progress.png" type="Texture" id=10]
[ext_resource path="res://GUI/WoodIcon.png" type="Texture" id=11]
[ext_resource path="res://GUI/Silver.ttf" type="DynamicFontData" id=12]
[ext_resource path="res://GUI/MetalIcon.png" type="Texture" id=13]
[ext_resource path="res://GUI/meatIcon.png" type="Texture" id=14]

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 12 )

[node name="PlayerGUI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HealthBar" type="TextureProgress" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -182.0
margin_right = 182.0
margin_bottom = 64.0
step = 1.0
value = 100.0
texture_under = ExtResource( 2 )
texture_over = ExtResource( 3 )
texture_progress = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HungerBar" type="TextureProgress" parent="."]
margin_right = 316.0
margin_bottom = 24.0
max_value = 50.0
step = 0.001
value = 50.0
texture_under = ExtResource( 5 )
texture_over = ExtResource( 6 )
texture_progress = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ThirstBar" type="TextureProgress" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -316.0
margin_bottom = 24.0
max_value = 50.0
step = 0.001
value = 50.0
texture_under = ExtResource( 9 )
texture_over = ExtResource( 8 )
texture_progress = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Wood" type="TextureRect" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -63.0
margin_top = -63.0
texture = ExtResource( 11 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WoodLabel" type="Label" parent="Wood"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -127.5
margin_top = -23.5
margin_right = -16.5
margin_bottom = 39.5
rect_pivot_offset = Vector2( 127.12, 23.7058 )
custom_fonts/font = SubResource( 1 )
text = "Wood: 0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Metal" type="TextureRect" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -63.0
margin_top = -63.0
texture = ExtResource( 13 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MetalLabel" type="Label" parent="Metal"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -127.5
margin_top = -23.5
margin_right = -16.5
margin_bottom = 39.5
rect_pivot_offset = Vector2( 127.12, 23.7058 )
custom_fonts/font = SubResource( 1 )
text = "Metal: 0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Meat" type="TextureRect" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -63.0
margin_top = -63.0
texture = ExtResource( 14 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MeatLabel" type="Label" parent="Meat"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -127.5
margin_top = -23.5
margin_right = -16.5
margin_bottom = 39.5
rect_pivot_offset = Vector2( 127.12, 23.7058 )
custom_fonts/font = SubResource( 1 )
text = "Meat: 0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}
